# Medicsan_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  app.py  init_db.py  loader  mobile responsive  package-lock.json  pyproject.toml  pytest.ini  report  requirements.txt
.github/workflows/: ci.yaml
data/: analytics.json  history.json  medicines.json
static/css/: style.css
static/js/: app.js  theme.js
templates/: assistant.html  compare.html  dashboard.html  index.html  interaction.html  login.html  register.html  symptom.html
tests/: conftest.py  test_routes.py  test_utils.py
